@@ -1,3 +1,20 @@
+"""
+    Copyright (C) 2023  Juliandev02
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <https://www.gnu.org/licenses>
+"""
+
 import os
 import sys
 import time
@@ -14,7 +31,7 @@ from halo import Halo
 from sys import exit
 
 # Base Variables
-version = "1.6.0-rc3"
+version = "1.6.0-rc4"
 alpha = False
 hbp = False
 dev_local = False
